# plasma-kde-multimonitor-plasmoid

./: .gitignore  AUTHORS  INSTALL  README.md  dbus_test.py  dev  lid  saved.py
src/: CMakeLists.txt
src/package/: metadata.desktop
src/package/contents/code/: data.js  widgetHandler.js
src/package/contents/config/: config.qml  main.xml
src/package/contents/templates/: plasma-org.kde.plasma.desktop-appletsrc_2  plasma-org.kde.plasma.desktop-appletsrc_3
src/package/contents/ui/: ConfigGeneral.qml  ConfigIconSettings.qml  ScreenGridView.qml  SystemPanel.qml  main.qml
src/plugin/: CMakeLists.txt  dbusUtility.cc  dbusUtility.h  lid.cpp  plasmoidplugin.cpp  plasmoidplugin.h  qmldir  systempanel.cpp  systempanel.h  udev_events.cpp
templates/: plasma-org.kde.plasma.desktop-appletsrc
